--- a/project/static/style.css
+++ b/project/static/style.css
@@ -2,6 +2,17 @@
     --max-width: 56%;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif
+}
+
+h5 {
+  font-size: 1.2rem;
+}
+.menu_font {
+  font-size: 0.7rem;
+}
+
 .rating {
     /* overflow: hidden; */
     transform: translate(-50%, -50%) rotateY(180deg) ;
@@ -93,14 +104,14 @@
 }
 
 /* ==========================VideoPlayer=========================== */
-:root {
+/* :root {
   --primary-color: grey;
   --font-color: white;
-}
+} */
 .fas {
   /* color: var(--font-color); */
   font-size: 25px;
-  color: white;
+  color: black;
 }
 
 
