--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -8,7 +8,7 @@
       <div class="card">
         <div class="card-header">
           <h4>
-            <i class="fas fa-sign-in-alt"></i> Login
+            <i class="fas fa-sign-in-alt"></i> Войти
           </h4>
         </div>
         <div class="card-body">
