--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -22,7 +22,7 @@
             href="{% url 'list_languages' %}">Языки</a></div>
 </div>
 
-    <div class="row">
+    <div class="row mt-3">
 
 {% for subject in paged_subjects %}
 
